fixed bug(added post not showing up)

--- a/client/static/css/main.css
+++ b/client/static/css/main.css
@@ -45,3 +45,7 @@ ul[dnd-list] li.selected {
     background-color: #dff0d8;
     color: #3c763d;
 }
+.fullpage{
+	height: 100vh;
+	width: 100%;
+}
